--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "Liza-Mwol",
-    "description": "Liza Mwol is the Modified Version of WhatsAsena, Made By @Chunkinde_padayali with Baileys.",
-    "logo": "https://i.imgur.com/2nYs8dN.jpg",
+    "name": "Toxic-Mwol",
+    "description": "Toxic Mwol is the Modified Version of WhatsAsena, Made By @Chunkinde_padayali with Baileys.",
+    "logo": "https://i.postimg.cc/sXg5dsrt/toxic.jpg",
     "keywords": ["whatsapp", "userbot", "Liza", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/Chunkindepadayali/LIZA-MWOL",
-    "website":   "https://github.com/Chunkindepadayali/LIZA-MWOL",
-    "success_url": "https://github.com/Chunkindepadayali/LIZA-MWOL",
+    "repository": "https://github.com/TOXICTURBO/LIZA-MWOL",
+    "website":   "https://github.com/TOXICTURBO/LIZA-MWOL",
+    "success_url": "https://github.com/TOXICTURBO/LIZA-MWOL",
     "stack": "container",
     "env": {
         "LIZA_SESSION": {
@@ -80,8 +80,8 @@
             "required": true,
             "value": "false"
         },
-        "LIZA_AI": {
-            "description": "turn on chat back auto reply Liza (use true to on and fale to off)",
+        "TOXIC_AI": {
+            "description": "turn on chat back auto reply Toxic (use true to on and fale to off)",
             "required": true,
             "value": "true"
         },
@@ -142,20 +142,20 @@
         "BOT_NAME": {
             "description": "heading for .list command reply",
             "required": false,
-            "value": "  𝐋𝐈𝐙𝐀 𝐌𝐖𝐎𝐋࿐  \n\n   *ωнαтsαρρ вσт™*   \n"
+            "value": "  TOXIC BOT࿐  \n\n   *ωнαтsαρρ вσт™*   \n"
         },
         "BOTV2_NAME": {
             "description": "heading for bgm command reply",
             "required": false,
-            "value": "ꪶ͢ɪͥᴛͭsᷤ ͢ᴍͫᴇͤᡃ⃝ʟɪᴢᴀ ᴍᴏʟ࿐"
+            "value": "TOXIC BOT࿐"
         },
         "BGM_DURATION": {
-            "description": "FUNY BGM DURATION  codded by (hunk!nd3 p4d4y41!",
+            "description": "FUNY BGM DURATION  codded by (TURBO!",
             "required": false,
             "value": "39999600"
         },
         "WORK_TYPE": {
-            "description": "Liza Mwol Working Type. If you use “public”, everyone can use the bot. Else if you use “private”, only you can use your bot.",
+            "description": "Toxic Mwol Working Type. If you use “public”, everyone can use the bot. Else if you use “private”, only you can use your bot.",
             "required": true,
             "value": "public"
         },
@@ -190,12 +190,12 @@
         "LG_LOGO": {
             "description": "LOGO list message image link(https://telegra.ph/)link.",
             "required": true,
-            "value": "https://telegra.ph/file/0e0409148fa47cdb92582.jpg"
+            "value": "https://telegra.ph/TOXIC-01-28"
         },
         "LOGO_NAME": {
             "description": "Set the logo list name",
             "required": true,
-            "value": "ꪶ͢ɪͥᴛͭsᷤ ͢ᴍͫᴇͤᡃ⃝ʟɪᴢᴀ ᴍᴏʟ࿐"
+            "value": "TOXIC BOT࿐"
         },
         "BAN_MESSAGE": {
             "description": "Customizable Ban Message! Use => default, to change back.",
